updated the github and medium link

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
             <div class="contact">
                 <img  class="icon" src="\static\img\github.png">
                 <dd class="contact__details">
-                    <a class="contact__link" href="https://github.com/shany-shan">
+                    <a class="contact__link" href="https://github.com/shanmuga-priya-tech">
                         @shanmugapriya
                     </a>
                 </dd>
@@ -29,7 +29,7 @@
             <div class="contact">
                 <img class="icon" src="\static\img\medium.png">
                 <dd class="contact__details">
-                    <a class="contact__link" href="https://medium.com/@priyaeswaran2023">
+                    <a class="contact__link" href="https://medium.com/@priyaeswaran">
                         @shanmugapriya
                     </a>
                 </dd>
